# TRIBAL

./: .gitignore  404.html  README.md  dnapars_install.sh  env.yml  index.html  license.md  mkdocs.yml  objects.inv  pyproject.toml  search.html  test_script.py  tribal.yml  tribal2_env.yml  tribal_env.yml  vignette.py
ABC/: Snakefile  config.yml  isotype_encoding.txt
ABC/Mouse_1/: clonotypes.txt
ABC/Mouse_2/: clonotypes.txt
ABC/Mouse_3/: clonotypes.txt
Human/: Snakefile  config.yml
NP-KLH/: Snakefile  config.yml  isotype_encoding.txt
NP-KLH/NP-KLH-1/: clonotypes.txt
NP-KLH/NP-KLH-2a/: clonotypes.txt
NP-KLH/NP-KLH-2b/: clonotypes.txt
api/base_tree/: index.html
api/clonotype/: index.html
api/lineagetree/: index.html
api/lineagetreelist/: index.html
api/preprocess/: index.html
api/tribal/: index.html
benchmark_pipeline/: Snakefile  config.yaml  tmat_inference.R  tree_inference.R
benchmark_pipeline/hl_exp/: Snakefile  config.yaml  transmat_direct.txt  transmat_seq.txt
benchmark_pipeline/tmats_exp/: Snakefile  config.yaml
benchmark_pipeline/transmats/: transmat0.txt  transmat1.txt  transmat10.txt  transmat11.txt  transmat12.txt  transmat13.txt  transmat14.txt  transmat15.txt  transmat16.txt  transmat17.txt  transmat18.txt  transmat19.txt  transmat2.txt  transmat3.txt  transmat4.txt  transmat5.txt  transmat6.txt  transmat7.txt  transmat8.txt  transmat9.txt
css/: logo.css
docs/: index.md
docs/api/: base_tree.md  clonotype.md  lineagetree.md  lineagetreelist.md  preprocess.md  tribal.md
docs/setup/: cli.md  data.md  install.md  package.md
example/: data.csv  isotypes.txt  lineage_tree.pkl  output_trees.pkl  roots.csv  roots.pkl  scores.csv
example/output/: Clonotype_1036_isotypes0.csv  Clonotype_1036_isotypes1.csv  Clonotype_1036_sequences0.fasta  Clonotype_1036_sequences1.fasta  Clonotype_1036_tree0.txt  Clonotype_1036_tree1.txt  Clonotype_1050_isotypes0.csv  Clonotype_1050_sequences0.fasta  Clonotype_1050_tree0.txt
experimental_data/: Snakefile  check_for_mutations.py  compute_likelihood.R  config.yaml  dnapars.smk  dnapars.yml  generate_clones.R  igphyml_config.yml  igphyml_pipeline.smk  igphyml_run.R  igphyml_write_trees.R  preprocess_airr.py  recode_seqs.py  tribal.smk  tribal.yml
experimental_data/GCB_NP_1/: GCB_NP_1_W33L_levels_0.75.csv
experimental_data/GCB_NP_2/: proportions.txt  transmat.txt
experimental_data/GCB_NP_2/example/: forest.pickle  isotypes.csv  score.csv  seq.fasta  tree.txt
experimental_data/day_14/: clonotype_summary.csv  clonotypes.txt  clonotypes_withMut.txt  clonotypes_withoutMut.txt  clonotypes_withoutW33l.txt  day_14_W33L.csv  day_14_W33L_levels_0.75.csv
experimental_data/hoehn_paper/: Snakefile  compute_igphyml_likelihood.R  config.yaml
license/: index.html
real_data/: Snakefile  config.yaml  mouse_isotype_encoding.txt  mouse_labels.txt  mouse_transmat.txt  mouse_transmat2.txt
real_data/GCB_NP_1/: GCB_NP_1_W33L.csv
real_data/GCB_NP_2/: GCB_NP_2_W33L.csv  GCB_NP_2_W33L_levels_0.75.csv
real_data/scripts/: concat_fasta.py  mouse_transmat.py  preprocess.R
scripts/: preprocess.R
search/: search_index.json
setup/cli/: index.html
setup/data/: index.html
setup/install/: index.html
setup/package/: index.html
simulator/: bcell_sim.py  root_sequences.csv
src/: alignment.py  bcell_sim.py  compute_true_likelihood.py  draw_state_diagram.py  draw_tree.py  edmonds_init.py  em_weight_matrix.py  gen_ground_truth_transmats.py  get_mut_level.py  incomp_anc.py  init_transmat.py  lineage_tree.py  lineage_tree_comp.py  max_likelihood_trans_probs.py  multi_spr.py  neighbor_joining.py  newicks_to_lineageforest.py  polytomy_resolver.py  preprocess.py  sankoff.py  score_class.py  small_parsimony.py  spr.py  steiner_tree.py  test.py  trans_matrix.py  tree_build.py  tree_moves.py  tree_utils.py  tribal.py  tribal_ml.py  tribal_poly.py  tribal_sub.py  tribal_tree.py  unrooted_spr.py  utils.py
tests/: __init__.py  test_preprocess.py
tribal/: __init__.py  backend.py  base_tree.py  cli.py  clonotype.py  draw_tree.py  expansion_graph.py  init_transmat.py  lineage_tree.py  max_likelihood_trans_probs.py  mptr.py  prep_parsimony_forest.py  preprocess.py  small_parsimony.py  steiner_tree.py  tree_selection.py  tribal.py  utils.py
tribal/data/: clonotypes.pkl  df.pkl  lineage_tree_list.pkl  transmat.txt
(+4020 files in other folders)
