[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tribal"
version = "0.1.0"
description = "tribal is a package to infer B cell lineage trees from single-cell RNA sequencing data"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Leah L. Weber", email = "lweber21@gmail.com"}
]

dependencies = [
    "numpy",
    "networkx==3.1",
    "ete3==3.1.2",
    # "graphviz>=7.1",
    "pygraphviz>=1.10",
    "pandas==2.1.1",
    "gurobipy==10.0.1",
    "biopython==1.81",
]

[project.urls]
"Homepage" = "https://github.com/elkebir-group/TRIBAL"



[project.scripts]
tribal = "tribal.cli:main"


[tool.hatch.build.targets.sdist]
include = [
    "tribal/data/*.csv",
    "tribal/data/*.pkl",
]

[tool.hatch.build.targets.wheel]
include = [
    "tribal/data/*.csv",
    "tribal/data/*.pkl",
]

# [tool.hatch.metadata.hooks.custom]
# module = "tribal.post_install"
# call = "download_and_install"